--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
             gem update --system
             gem install bundler
             bundle install --jobs=4 --retry=3 --path vendor/bundle
+            NODE_ENV=test bundle exec rails webpacker:compile
       - save_cache:
           paths:
             - ./vendor/bundle
